--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_71">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="D:/03lab/06java/TestJNI/TestJNI/x64/Release"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/quartz-all-2.0.jar" sourcepath="lib/quartz-all-2.0-src.zip"/>
-	<classpathentry kind="lib" path="D:/03lab/11redis/jedis-2.9.0.jar"/>
 	<classpathentry kind="lib" path="/TJLib/lib/runtime/junit/4.12/junit-4.12-sources.jar"/>
 	<classpathentry kind="lib" path="/TJLib/lib/runtime/junit/4.12/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="/TJLib/lib/apache/commons/net/3.6/commons-net-3.6-sources.jar"/>
