--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,16 @@
-/com/
+/java/
+/java8/
+/javaAndC/
+/javaScriptEngine/
+/jdbc/
+/jsonFileIO/
+/method/
+/method02/
+/reflect/
+/sciNumExp/
+/serializable/
+/socketDemo/
 /test/
+/testZone/
+/transientTest/
+/weakReference/
