add something new

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/com/daxiami101/gzip/CHZipUtils.java=UTF-8
+encoding//src/designPattern/momemto=UTF-8
+encoding//src/designPattern/momemto/MementoPatternDemo.java=UTF-8
 encoding//src/test/java/ftp/FTPUtils.java=UTF-8
