--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,44 @@
 /com/
+/BIONIOAIO/
+/BigDecimal/
+/BufferFillDrain.class
+/ConcurrentHsMap.class
+/DecimalFormat/
+/ExcelTest.class
+/ExcelUtil.class
+/IP/
+/InterfaceTest.class
+/Lambda/
+/MapEntryTest.class
+/ReadFile.class
+/ReceiveMessUDPSever.class
+/SendMessUDP.class
+/Solution938/
+/Timer/
+/annotation/
+/asy/
+/callBack/
+/dateFormatError/
+/demo/
+/demo01/
+/designPattern/
+/fileIO/
+/formula/
+/generic/
+/getIP.class
+/java/
+/java8/
+/javaAndC/
+/javaScriptEngine/
+/jdbc/
+/jsonFileIO/
+/method/
+/method02/
+/reflect/
+/sciNumExp/
+/serializable/
+/socketDemo/
+/test/
+/testZone/
+/transientTest/
+/weakReference/
