--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,13 @@
 	<classpathentry kind="lib" path="lib/staxon-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/staxon-jackson-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.3.1.jar"/>
+	<classpathentry kind="lib" path="/TJLib/lib/apache-commons/io/2.4/commons-io-2.4-sources.jar"/>
+	<classpathentry kind="lib" path="/TJLib/lib/apache-commons/io/2.4/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/TJLib/lib/jsoup/1.5/jsoup-1.5.2-sources.jar"/>
+	<classpathentry kind="lib" path="/TJLib/lib/jsoup/1.5/jsoup-1.5.2.jar"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-2.39.1.jar"/>
+	<classpathentry kind="lib" path="/TJLib/lib/apache-httpcomponents/4.3/client/httpclient-4.3.jar"/>
+	<classpathentry kind="lib" path="/TJLib/lib/apache-httpcomponents/4.3/core/httpcore-4.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
