--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/com/daxiami101/apache/http/HttpClient4.java=UTF-8
 encoding//src/com/daxiami101/gzip/CHZipUtils.java=UTF-8
 encoding//src/designPattern/momemto=UTF-8
 encoding//src/designPattern/momemto/MementoPatternDemo.java=UTF-8
